移动图片文件夹

--- a/Models/-VC/2025.06.10_Pureformer-VC.md
+++ b/Models/-VC/2025.06.10_Pureformer-VC.md
@@ -17,7 +17,7 @@
   - [Github](https://github.com/ywh-my/PureformerVC)
   - [Demo]()
 - 文件:
-  - [ArXiv:2506.08348v1](_PDF/2025.06.10_2506.08348v1__Pureformer-VC__Non-Parallel_Voice_Conversion_with_Pure_Stylized_Transformer_Blocks_and_Triplet_Discriminative_Training.pdf)
+  - [ArXiv:2506.08348v1](PDF/2025.06.10_2506.08348v1__Pureformer-VC__Non-Parallel_Voice_Conversion_with_Pure_Stylized_Transformer_Blocks_and_Triplet_Discriminative_Training.pdf)
   - [Publication] #TODO
 
 </details>
@@ -239,7 +239,7 @@ We typically incorporate **ASTM** into our decoder as a style transfer module.
 
 ## 3·方法
 
-![](_Images/2025.06.10_Pureformer-VC_Fig.01.png)
+![Images/2025.06.10_Pureformer-VC_Fig.01.png](Images/2025.06.10_Pureformer-VC_Fig.01.png)
 <a id='fig:1'>
 <!--
 The architecture of ***Pureformer-VC***.
@@ -503,7 +503,7 @@ $$
 L_{total} = L_{t-vae} + \lambda_{3}L_{t-aam} + \lambda_{4}L_{tri}
 $$
 
-![](_Images/2025.06.10_Pureformer-VC_Fig.02.png)
+![Images/2025.06.10_Pureformer-VC_Fig.02.png](Images/2025.06.10_Pureformer-VC_Fig.02.png)
 <a id='fig:2'>
 <!--
 The illustration of training objective.
@@ -651,7 +651,7 @@ MCD 越低, 重构效果越好.
 -->
 [表格 01](#table:1) 和[表格 02](#table:2) 展示了 ***Pureformer-VC*** 在多到多和单样本 (任意到任意) VC 设置下, 与基线方法在两个数据集上的比较.
 
-![](_Images/2025.06.10_Pureformer-VC_Tab.01.png)
+![Images/2025.06.10_Pureformer-VC_Tab.01.png](Images/2025.06.10_Pureformer-VC_Tab.01.png)
 <a id=table:1>
 <!--
 Comparison of baseline and proposed methods for many-to-many and one-shot VC on the VCTK dataset (with a $95\%$ confidence interval).
@@ -659,7 +659,7 @@ Comparison of baseline and proposed methods for many-to-many and one-shot VC on 
 表格 01: 基线和所提方法在 VCTK 数据集上多到多和单样本声音转换的比较 (置信区间为 $95\%$).
 </a>
 
-![](_Images/2025.06.10_Pureformer-VC_Tab.02.png)
+![Images/2025.06.10_Pureformer-VC_Tab.02.png](Images/2025.06.10_Pureformer-VC_Tab.02.png)
 <a id=table:2>
 <!--
 Comparison of baseline and proposed methods for many-to-many and one-shot VC on the AISHELL-3 dataset (with a $95\%$ confidence interval).
@@ -722,7 +722,7 @@ Furthermore, the experiments demonstrate that both triplet loss and AAM-Softmax 
 我们发现, 我们的方法的决策分数高于最佳基线模型, **MAIN-VC**.
 此外, 实验表明, 三元组损失和 AAM-Softmax 都有助于提高音色生成的准确性.
 
-![](_Images/2025.06.10_Pureformer-VC_Tab.03.png)
+![Images/2025.06.10_Pureformer-VC_Tab.03.png](Images/2025.06.10_Pureformer-VC_Tab.03.png)
 <a id=table:3>
 <!--
 Fake Detection score comparison for ablation study ablation.
@@ -737,7 +737,7 @@ The AAM-softmax loss has a significant impact on the clustering of speaker embed
 为了可视化每个模型的分离能力, 我们展示了说话人表示的 t-SNE 散点图, 如[图 03](#fig:3) 所示.
 AAM-Softmax 损失对说话人嵌入向量的聚类有着显著影响, 而三元组损失有助于创建不同类别之间的更加明显的界限.
 
-![](_Images/2025.06.10_Pureformer-VC_Fig.03.png)
+![Images/2025.06.10_Pureformer-VC_Fig.03.png](Images/2025.06.10_Pureformer-VC_Fig.03.png)
 <a id='fig:3'>
 <!--
 The visualization of speaker representations extracted from 6 unseen speakers’ utterances.
