--- a/Models/SpeechLM_TTS/2024.07.07_CosyVoice.md
+++ b/Models/SpeechLM_TTS/2024.07.07_CosyVoice.md
@@ -23,7 +23,7 @@
   - [Github](https://github.com/FunAudioLLM/CosyVoice)
   - [Demo](https://fun-audio-llm.github.io)
 - 文件:
-  - [ArXiv](../_PDF/2407.05407v2__CosyVoice__A_Scalable_Multilingual_Zero-shot_Text-to-Speech_Synthesizer_Based_on_Supervised_Semantic_Tokens.pdf)
+  - [ArXiv](../SpeechLM/_PDF/2407.05407v2__CosyVoice__A_Scalable_Multilingual_Zero-shot_Text-to-Speech_Synthesizer_Based_on_Supervised_Semantic_Tokens.pdf)
   - [Publication] #TODO
 
 </details>
@@ -117,7 +117,7 @@ To obtain a perceptible signal, the **HiFi-GAN** vocoder[^04] is used to synthes
 </td></tr>
 <tr><td colspan="2">
 
-![](../Images/2024.07.07_CosyVoice_Fig.01.png)
+![](../SpeechLM/Images/2024.07.07_CosyVoice_Fig.01.png)
 
 <a id="Fig.01">Figure.01</a>: An overview of the proposed CosyVoice model.
 (a) demonstrates theS3tokenizer, where dashed modules are only used at the training stage.
@@ -297,7 +297,7 @@ Additionally, the speaker embedding and the Mel spectrogram of the prompt speech
 </td></tr>
 <tr><td colspan="2">
 
-![](../Images/2024.07.07_CosyVoice_Fig.02.png)
+![](../SpeechLM/Images/2024.07.07_CosyVoice_Fig.02.png)
 
 <a id="Fig.02">Figure.02</a>: Sequence construction for (a) zero-shot in-context learning and (b) cross-lingual voice cloning.
 LID represents language identifier.
@@ -502,31 +502,31 @@ As a result, ***CosyVoice*** achieves the human parity generation quality.
 
 ## References: 参考文献
 
-[^01]: [TorToise-TTS](../../Diffusion/2023.05.12_TorToise-TTS.md)
-[^02]: [VALL-E](2023.01.05_VALL-E.md)
-[^03]: [BASE-TTS](2024.02.12_BASE-TTS.md)
-[^04]: [HiFi-GAN](../../Vocoder/2020.10.12_HiFi-GAN.md)
+[^01]: [TorToise-TTS](../Diffusion/2023.05.12_TorToise-TTS.md)
+[^02]: [VALL-E](../SpeechLM/ST2S/2023.01.05_VALL-E.md)
+[^03]: [BASE-TTS](../SpeechLM/ST2S/2024.02.12_BASE-TTS.md)
+[^04]: [HiFi-GAN](../Vocoder/2020.10.12_HiFi-GAN.md)
 [^05]: [EnCodec](../../SpeechCodec/2022.10.24_EnCodec.md)
-[^06]: [HuBERT](../../SpeechRepresentation/2021.06.14_HuBERT.md)
-[^07]: [Whisper](../../ASR/2022.12.06_Whisper.md)
-[^08]: [AudioLM](2022.09.07_AudioLM.md)
-[^09]: [ASQ](../../../Modules/VQ/2023.12.26_ASQ.md)
-[^10]: [DDPM](../../Diffusion/2020.06.19_DDPM.md)
-[^11]: [Voicebox](../../Diffusion/2023.06.23_Voicebox.md)
-[^12]: [VoiceFlow](../../Diffusion/2023.09.10_VoiceFlow.md)
-[^13]: [Matcha-TTS](../../Diffusion/2023.09.06_Matcha-TTS.md)
-[^14]: [ReFlow-TTS](../../Flow/2023.09.29_ReFlow-TTS.md)
-[^15]: [x-vector](../../SpeechRepresentation/X-vectors.md)
-[^16]: [CFG](../../Diffusion/2022.07.26_Classifier-Free_Guidance.md)
-[^17]: [Flow Matching](../../Diffusion/2022.10.06_Flow_Matching.md)
-[^18]: [OT-CFM](../../Diffusion/2023.02.01_OT-CFM.md)
-[^19]: [iDDPM](../../Diffusion/2021.02.18_iDDPM.md)
-[^20]: [TextrolSpeech](../../../Datasets/2023.08.28_TextrolSpeech.md)
-[^21]: [LibriTTS](../../../Datasets/2019.04.05_LibriTTS.md)
-[^22]: [UniCATS](../../Diffusion/2023.06.13_UniCATS.md)
-[^23]: [LibriSpeech](../../../Datasets/2015.04.19_LibriSpeech.md)
-[^24]: [FunAudioLLM](../2024.07.04_FunAudioLLM.md)
-[^25]: [ERes2Net](../../_Basis/2023.05.22_ERes2Net.md)
-[^26]: [AISHELL-3](../../../Datasets/2020.10.22_AISHELL-3.md)
-[^27]: [Paraformer](../../ASR/2022.06.16_Paraformer.md)
-[^28]: [Emo2Vec](../../SpeechRepresentation/2023.12.23_Emotion2Vec.md)
+[^06]: [HuBERT](../Tokenizers/2021.06.14_HuBERT.md)
+[^07]: [Whisper](../-ASR/2022.12.06_Whisper.md)
+[^08]: [AudioLM](../SpeechLM/PureSpeechLM/2022.09.07_AudioLM.md)
+[^09]: [ASQ](../../Modules/VQ/2023.12.26_ASQ.md)
+[^10]: [DDPM](../../Diffusion/_2020.06.19_DDPM.mdd)
+[^11]: [Voicebox](../../FlowMatching/2023.06.23_Voicebox.md.md)
+[^12]: [VoiceFlow](../../FlowMatching/2023.09.10_VoiceFlow.md.md)
+[^13]: [Matcha-TTS](../../FlowMatching/2023.09.06_Matcha-TTS.md.md)
+[^14]: [ReFlow-TTS](../Flow/2023.09.29_ReFlow-TTS.md)
+[^15]: [x-vector](../Tokenizers/X-vectors.md)
+[^16]: [CFG](../Diffusion/_2022.07.26_Classifier-Free_Guidance.md)
+[^17]: [Flow Matching](../../FlowMatching/_2022.10.06_Flow_Matching.mdd)
+[^18]: [OT-CFM](../FlowMatching/_2023.02.01_Conditional_Flow_Matching.md)
+[^19]: [iDDPM](../Diffusion/_2021.02.18_iDDPM.md)
+[^20]: [TextrolSpeech](../../Datasets/2023.08.28_TextrolSpeech.md)
+[^21]: [LibriTTS](../../Datasets/2019.04.05_LibriTTS.md)
+[^22]: [UniCATS](../Diffusion/2023.06.13_UniCATS.md)
+[^23]: [LibriSpeech](../../Datasets/2015.04.19_LibriSpeech.md)
+[^24]: [FunAudioLLM](../SpeechLM/2024.07.04_FunAudioLLM.md)
+[^25]: [ERes2Net](../_Basis/2023.05.22_ERes2Net.md)
+[^26]: [AISHELL-3](../../Datasets/2020.10.22_AISHELL-3.md)
+[^27]: [Paraformer](../-ASR/2022.06.16_Paraformer.md)
+[^28]: [Emo2Vec](../Tokenizers/2023.12.23_Emotion2Vec.md)
