--- a/Models/SpeechLM_TTS/2024.09.01_MaskGCT.md
+++ b/Models/SpeechLM_TTS/2024.09.01_MaskGCT.md
@@ -21,7 +21,7 @@
   - [Github](https://github.com/open-mmlab/Amphion/blob/main/models/tts/maskgct)
   - [Demo](https://maskgct.github.io/)
 - 文件:
-  - [ArXiv](../_PDF/2409.00750v3__MaskGCT__Zero-Shot_Text-to-Speech_with_Masked_Generative_Codec_Transformer.pdf)
+  - [ArXiv](../SpeechLM/_PDF/2409.00750v3__MaskGCT__Zero-Shot_Text-to-Speech_with_Masked_Generative_Codec_Transformer.pdf)
   - [Publication] #TODO
 
 </details>
@@ -513,16 +513,16 @@ We also explore the scalability of ***MaskGCT*** in tasks such as speech transla
 
 ## References: 参考文献
 
-[^01]: [SPEAR-TTS](2023.02.07_SPEAR-TTS.md)
-[^02]: [VALL-E](2023.01.05_VALL-E.md)
-[^03]: [BASE-TTS](2024.02.12_BASE-TTS.md)
-[^04]: [CLaM-TTS](../2024.04.03_CLaM-TTS.md)
-[^05]: [VoiceCraft](../2024.03.25_VoiceCraft.md)
-[^06]: [Seed-TTS](../2024.06.04_Seed-TTS.md)
-[^07]: [NaturalSpeech2](../../Diffusion/2023.04.18_NaturalSpeech2.md)
-[^08]: [NaturalSpeech3/FACodec](../../Diffusion/2024.03.05_NaturalSpeech3.md)
-[^09]: [Voicebox](../../Diffusion/2023.06.23_Voicebox.md)
-[^10]: [Mega-TTS](2023.06.06_Mega-TTS.md)
+[^01]: [SPEAR-TTS](../SpeechLM/ST2S/2023.02.07_SPEAR-TTS.md)
+[^02]: [VALL-E](../SpeechLM/ST2S/2023.01.05_VALL-E.md)
+[^03]: [BASE-TTS](../SpeechLM/ST2S/2024.02.12_BASE-TTS.md)
+[^04]: [CLaM-TTS](../SpeechLM/2024.04.03_CLaM-TTS.md)
+[^05]: [VoiceCraft](../../SpeechLM_TTS/2024.03.25_VoiceCraft.md25_VoiceCraft.md)
+[^06]: [Seed-TTS](../SpeechLM/2024.06.04_Seed-TTS.md)
+[^07]: [NaturalSpeech2](../Diffusion/2023.04.18_NaturalSpeech2.md)
+[^08]: [NaturalSpeech3/FACodec](../Diffusion/2024.03.05_NaturalSpeech3.md)
+[^09]: [Voicebox](../../FlowMatching/2023.06.23_Voicebox.md.md)
+[^10]: [Mega-TTS](../SpeechLM/ST2S/2023.06.06_Mega-TTS.md)
 [^11]: Maskgit: Masked generative image transformer.
 [^12]: Muse: Text-to-image generation via masked generative transformers.
 [^13]: Mage: Masked generative encoder to unify representation learning and image synthesis.
@@ -531,48 +531,48 @@ We also explore the scalability of ***MaskGCT*** in tasks such as speech transla
 [^16]: Vampnet: Music generation via masked acoustic token modeling.
 [^17]: Masksr: Masked language model for full-band speech restoration.
 [^18]: Masked audio generation using a single non-autoregressive transformer.
-[^19]: [SoundStorm](2023.05.16_SoundStorm.md)
-[^20]: [VQ-VAE](../../../Modules/VQ/2017.11.02_VQ-VAE.md)
-[^21]: [FastSpeech2](../../Acoustic/2020.06.08_FastSpeech2.md)
-[^22]: [FastSpeech](../../Acoustic/2019.05.22_FastSpeech.md)
-[^23]: [NaturalSpeech](../../E2E/2022.05.09_NaturalSpeech.md)
-[^24]: [Tacotron](../../Acoustic/2017.03.29_Tacotron.md)
-[^25]: [VITS](../../E2E/2021.06.11_VITS.md)
+[^19]: [SoundStorm](../SpeechLM/ST2S/2023.05.16_SoundStorm.md)
+[^20]: [VQ-VAE](../../Modules/VQ/2017.11.02_VQ-VAE.md)
+[^21]: [FastSpeech2](../Acoustic/2020.06.08_FastSpeech2.md)
+[^22]: [FastSpeech](../Acoustic/2019.05.22_FastSpeech.md)
+[^23]: [NaturalSpeech](../E2E/2022.05.09_NaturalSpeech.md)
+[^24]: [Tacotron](../Acoustic/2017.03.29_Tacotron.md)
+[^25]: [VITS](../E2E/2021.06.11_VITS.md)
 [^26]: [EnCodec](../../SpeechCodec/2022.10.24_EnCodec.md)
-[^27]: [MusicGen](../../Music/2023.06.08_MusicGen.md)
+[^27]: [MusicGen](../Music/2023.06.08_MusicGen.md)
 [^28]: [SoundStream](../../SpeechCodec/2021.07.07_SoundStream.md)
-[^29]: [SimpleSpeech](../../Diffusion/2024.06.04_SimpleSpeech.md)
-[^30]: [DiTTo-TTS](../../Diffusion/2024.06.17_DiTTo-TTS.md)
-[^31]: [E2 TTS](../../Diffusion/2024.06.26_E2_TTS.md)
+[^29]: [SimpleSpeech](../Diffusion/2024.06.04_SimpleSpeech.md)
+[^30]: [DiTTo-TTS](../../FlowMatching/2024.06.17_DiTTo-TTS.md.md)
+[^31]: [E2 TTS](../../FlowMatching/2024.06.26_E2_TTS.md.md)
 [^32]: Improved masked image generation with token-critic.
-[^33]: [W2V-BERT](../../SpeechRepresentation/2021.08.07_W2V-BERT.md)
-[^34]: [HuBERT](../../SpeechRepresentation/2021.06.14_HuBERT.md)
-[^35]: [WavLM](../../SpeechRepresentation/2021.10.26_WavLM.md)
+[^33]: [W2V-BERT](../Tokenizers/2021.08.07_W2V-BERT.md)
+[^34]: [HuBERT](../Tokenizers/2021.06.14_HuBERT.md)
+[^35]: [WavLM](../Tokenizers/2021.10.26_WavLM.md)
 [^36]: [DAC](../../SpeechCodec/2023.06.11_Descript-Audio-Codec.md)
-[^37]: [TorToise-TTS](../../Diffusion/2023.05.12_TorToise-TTS.md)
-[^38]: [RepCodec](../../SpeechCodec/2023.08.31_RepCodec.md)
-[^39]: [ConvNeXt](../../_Basis/2022.01.10_ConvNeXt.md)
-[^40]: [VQ-GAN](../../../Modules/VQ/2020.12.17_VQGAN.md)
-[^41]: [LLaMA 2](../../TextLM/2023.07.18_LLaMA2.md)
-[^42]: [GELU](../../../Modules/Activation/GELU.md)
-[^43]: [RoPE](../../../Modules/PositionEmb/RoPE.md)
-[^44]: [RMSNorm](../../../Modules/Normalization/2019.10.16_RMSNorm.md)
-[^45]: [Flow Matching](../../Diffusion/2022.10.06_Flow_Matching.md)
-[^46]: [Vocos](../../Vocoder/2023.03.01_Vocos.md)
-[^47]: [Emilia](../../../Datasets/2024.07.07_Emilia.md)
-[^48]: [LibriSpeech](../../../Datasets/2015.04.19_LibriSpeech.md)
-[^49]: [Common Voice](../../../Datasets/CommonVoice.md)
-[^50]: [DiDiSpeech](../../../Datasets/2020.10.19_DiDiSpeech.md)
-[^51]: [Wav2Vec2.0](../../SpeechRepresentation/2020.06.20_Wav2Vec2.0.md)
-[^52]: [XTTS](../2024.06.07_XTTS.md)
-[^53]: [CosyVoice](2024.07.07_CosyVoice.md)
+[^37]: [TorToise-TTS](../Diffusion/2023.05.12_TorToise-TTS.md)
+[^38]: [RepCodec](../Tokenizers/2023.08.31_RepCodec.md)
+[^39]: [ConvNeXt](../_Basis/2022.01.10_ConvNeXt.md)
+[^40]: [VQ-GAN](../../Modules/VQ/2020.12.17_VQGAN.md)
+[^41]: [LLaMA 2](../TextLM/2023.07.18_LLaMA2.md)
+[^42]: [GELU](../../Modules/Activation/GELU.md)
+[^43]: [RoPE](../../Modules/PositionEmb/RoPE.md)
+[^44]: [RMSNorm](../../Modules/Normalization/2019.10.16_RMSNorm.md)
+[^45]: [Flow Matching](../../FlowMatching/2022.10.06_Flow_Matching_for_Generative_Modeling.mdr_Generative_Modeling.md)md)
+[^46]: [Vocos](../Vocoder/2023.03.01_Vocos.md)
+[^47]: [Emilia](../../Datasets/2024.07.07_Emilia.md)
+[^48]: [LibriSpeech](../../Datasets/2015.04.19_LibriSpeech.md)
+[^49]: [Common Voice](../../Datasets/CommonVoice.md)
+[^50]: [DiDiSpeech](../../Datasets/2020.10.19_DiDiSpeech.md)
+[^51]: [Wav2Vec2.0](../Tokenizers/2020.06.20_Wav2Vec2.0.md)
+[^52]: [XTTS](../SpeechLM/2024.06.07_XTTS.md)
+[^53]: [CosyVoice](../../SpeechLM_TTS/2024.07.07_CosyVoice.md.07.07_CosyVoice.md)
 [^54]: [Phonemizer](../../_Basis/Phonemizer.md)
-[^55]: [BPE](../../_Basis/2015.08.31_BPE.md) A New Algorithm for Data Compression.
-[^56]: [AdamW](../../../Modules/Optimization/2017.11.14_AdamW.md)
-[^57]: [CFG](../../Diffusion/2022.07.26_Classifier-Free_Guidance.md)
+[^55]: [BPE](../_Basis/2015.08.31_BPE.md) A New Algorithm for Data Compression.
+[^56]: [AdamW](../../Modules/Optimization/2017.11.14_AdamW.md)
+[^57]: [CFG](../Diffusion/_2022.07.26_Classifier-Free_Guidance.md)
 [^58]: Common diffusion noise schedules and sample steps are flawed.
 [^59]: L2-ARCTIC: A non-native english speech corpus.
-[^60]: [ESD](../../../Datasets/2020.10.28_ESD.md)
+[^60]: [ESD](../../Datasets/2020.10.28_ESD.md)
 [^61]: xue2024convert
-[^62]: [AutoVC](../../Voice_Conversion/2019.05.14_AutoVC.md)
-[^63]: [Emotion2Vec](../../SpeechRepresentation/2023.12.23_Emotion2Vec.md)
+[^62]: [AutoVC](../../VC/2019.05.14_AutoVC.md)
+[^63]: [Emotion2Vec](../Tokenizers/2023.12.23_Emotion2Vec.md)
