--- a/Models/SpeechLM_TTS/2024.12.13_CosyVoice2.md
+++ b/Models/SpeechLM_TTS/2024.12.13_CosyVoice2.md
@@ -30,7 +30,7 @@
   - [Github](https://github.com/funaudiollm/cosyvoice)
   - [Demo](https://funaudiollm.github.io/cosyvoice2)
 - 文件:
-  - [ArXiv](../_PDF/2412.10117v3__CosyVoice2__Scalable_Streaming_Speech_Synthesis_with_Large_Language_Models.pdf)
+  - [ArXiv](../SpeechLM/_PDF/2412.10117v3__CosyVoice2__Scalable_Streaming_Speech_Synthesis_with_Large_Language_Models.pdf)
   - [Publication] #TODO
 
 </details>
@@ -666,62 +666,62 @@ Additionally, CosyVoice does not perform well when tasked with singing.
 
 ## References: 参考文献
 
-[^01]: [Tacotron](../../Acoustic/2017.03.29_Tacotron.md)
-[^02]: [Tacotron2](../../Acoustic/2017.10.20_DeepVoice3.md)
-[^03]: [DeepVoice3](../../Acoustic/2017.10.20_DeepVoice3.md)
-[^04]: [ClariNet](../../E2E/2018.07.19_ClariNet.md)
-[^05]: [FastSpeech](../../Acoustic/2019.05.22_FastSpeech.md)
-[^06]: [Transformer-TTS](../../Acoustic/2018.09.19_TransformerTTS.md)
-[^07]: [FastSpeech2](../../Acoustic/2020.06.08_FastSpeech2.md)
-[^08]: [VALL-E](2023.01.05_VALL-E.md)
+[^01]: [Tacotron](../Acoustic/2017.03.29_Tacotron.md)
+[^02]: [Tacotron2](../Acoustic/2017.10.20_DeepVoice3.md)
+[^03]: [DeepVoice3](../Acoustic/2017.10.20_DeepVoice3.md)
+[^04]: [ClariNet](../E2E/2018.07.19_ClariNet.md)
+[^05]: [FastSpeech](../Acoustic/2019.05.22_FastSpeech.md)
+[^06]: [Transformer-TTS](../Acoustic/2018.09.19_TransformerTTS.md)
+[^07]: [FastSpeech2](../Acoustic/2020.06.08_FastSpeech2.md)
+[^08]: [VALL-E](../SpeechLM/ST2S/2023.01.05_VALL-E.md)
 [^09]: [SoundStream](../../SpeechCodec/2021.07.07_SoundStream.md)
 [^10]: [EnCodec](../../SpeechCodec/2022.10.24_EnCodec.md)
-[^11]: [FunCodec](../../SpeechCodec/2023.09.14_FunCodec.md)
-[^12]: [SPEAR-TTS](2023.02.07_SPEAR-TTS.md)
-[^13]: [ELLA-V](2024.01.14_ELLA-V.md)
-[^14]: [VALL-T](2024.01.25_VALL-T.md)
-[^15]: [RALL-E](2024.04.04_RALL-E.md)
-[^16]: [VALL-E2](2024.06.08_VALL-E_2.md)
-[^17]: [VALL-E R](2024.06.12_VALL-E_R.md)
+[^11]: [FunCodec](../Tokenizers/2023.09.14_FunCodec.md)
+[^12]: [SPEAR-TTS](../SpeechLM/ST2S/2023.02.07_SPEAR-TTS.md)
+[^13]: [ELLA-V](../../SpeechLM_TTS/2024.01.14_ELLA-V.md024.01.14_ELLA-V.md)
+[^14]: [VALL-T](../SpeechLM/ST2S/2024.01.25_VALL-T.md)
+[^15]: [RALL-E](../SpeechLM/ST2S/2024.04.04_RALL-E.md)
+[^16]: [VALL-E2](../../SpeechLM_TTS/2024.06.08_VALL-E_2.md4.06.08_VALL-E_2.md)
+[^17]: [VALL-E R](../../SpeechLM_TTS/2024.06.12_VALL-E_R.md4.06.12_VALL-E_R.md)
 [^18]: [MaskGCT](2024.09.01_MaskGCT.md)
-[^19]: [WaveNeXt](../../Vocoder/2023.12.16_WaveNeXt.md)
-[^20]: [Vocos](../../Vocoder/2023.03.01_Vocos.md)
-[^21]: [MELLE](2024.07.11_MELLE.md)
-[^22]: [DDPM](../../Diffusion/2020.06.19_DDPM.md)
-[^23]: [Song et al. Score-Based Generative Modeling through SDE](../../Diffusion/2020.11.26_Score-Based_Generative_Modeling_through_SDE.md)
-[^24]: [Flow Matching](../../Diffusion/2022.10.06_Flow_Matching.md)
-[^25]: [Voicebox](../../Diffusion/2023.06.23_Voicebox.md)
-[^26]: [NaturalSpeech3](../../Diffusion/2024.03.05_NaturalSpeech3.md)
-[^27]: [VoiceFlow](../../Diffusion/2023.09.10_VoiceFlow.md)
-[^28]: [Matcha-TTS](../../Diffusion/2023.09.06_Matcha-TTS.md)
-[^29]: [E3-TTS](../../Diffusion/2023.11.02_E3_TTS.md)
-[^30]: [DiTTo-TTS](../../Diffusion/2024.06.17_DiTTo-TTS.md)
-[^31]: [E2-TTS](../../Diffusion/2024.06.26_E2_TTS.md)
-[^32]: [F5-TTS](../../Diffusion/2024.10.09_F5-TTS.md)
-[^33]: [Seed-TTS](../2024.06.04_Seed-TTS.md)
+[^19]: [WaveNeXt](../Vocoder/2023.12.16_WaveNeXt.md)
+[^20]: [Vocos](../Vocoder/2023.03.01_Vocos.md)
+[^21]: [MELLE](../../SpeechLM_TTS/2024.07.11_MELLE.md2024.07.11_MELLE.md)
+[^22]: [DDPM](../../Diffusion/_2020.06.19_DDPM.mdd)
+[^23]: [Song et al. Score-Based Generative Modeling through SDE](../Diffusion/_2020.11.26_Score-Based_Generative_Modeling_through_SDE.md)
+[^24]: [Flow Matching](../../FlowMatching/2022.10.06_Flow_Matching.md.md)
+[^25]: [Voicebox](../../FlowMatching/2023.06.23_Voicebox.md.md)
+[^26]: [NaturalSpeech3](../Diffusion/2024.03.05_NaturalSpeech3.md)
+[^27]: [VoiceFlow](../../FlowMatching/2023.09.10_VoiceFlow.md.md)
+[^28]: [Matcha-TTS](../../FlowMatching/2023.09.06_Matcha-TTS.md.md)
+[^29]: [E3-TTS](../Diffusion/2023.11.02_E3_TTS.md)
+[^30]: [DiTTo-TTS](../../FlowMatching/2024.06.17_DiTTo-TTS.md.md)
+[^31]: [E2-TTS](../../FlowMatching/2024.06.26_E2_TTS.md.md)
+[^32]: [F5-TTS](../../FlowMatching/2024.10.09_F5-TTS.md.md)
+[^33]: [Seed-TTS](../SpeechLM/2024.06.04_Seed-TTS.md)
 [^34]: [CosyVoice](2024.07.07_CosyVoice.md)
-[^35]: [FireRedTTS](../2024.09.05_FireRedTTS.md)
-[^36]: [GPT-4o](../Interaction/2024.09.06_GPT-4o.md)
-[^37]: [SpeechGPT](../Interaction/2023.05.18_SpeechGPT.md)
-[^38]: [LiveSpeech](../2024.06.05_LiveSpeech.md)
-[^39]: [LiveSpeech2](../2024.10.01_LiveSpeech2.md)
-[^40]: [BASE-TTS](2024.02.12_BASE-TTS.md)
-[^41]: [LLM2Speech](../2023.09.20_LLM2Speech.md)
-[^42]: [FSQ](../../../Modules/VQ/FSQ.md)
-[^43]: [FunAudioLLM](../2024.07.04_FunAudioLLM.md)
-[^44]: [RoPE](../../../Modules/PositionEmb/RoPE.md)
-[^45]: [Qwen2.5](../../TextLM/2024.12.19_Qwen2.5.md)
-[^46]: [CFG](../../Diffusion/2022.07.26_Classifier-Free_Guidance.md)
-[^47]: [iDDPM](../../Diffusion/2021.02.18_iDDPM.md)
-[^49]: [DPO](../../../Modules/RLHF/2023.05.29_DPO.md)
-[^50]: [Paraformer](../../ASR/2022.06.16_Paraformer.md)
-[^51]: [LibriSpeech](../../../Datasets/2015.04.19_LibriSpeech.md)
-[^52]: [ERes2Net](../../_Basis/2023.05.22_ERes2Net.md)
-[^53]: [DNSMOS P.385](../../../Evaluations/2021.10.05_DNSMOS_P.385.md)
-[^54]: [Whisper](../../ASR/2022.12.06_Whisper.md)
-[^55]: [S3prl](../../../Evaluations/2024.04.15_SUPERB.md)
+[^35]: [FireRedTTS](../SpeechLM/2024.09.05_FireRedTTS.md)
+[^36]: [GPT-4o](../SpeechLM/Interaction/2024.09.06_GPT-4o.md)
+[^37]: [SpeechGPT](../SpeechLM/Interaction/2023.05.18_SpeechGPT.md)
+[^38]: [LiveSpeech](../SpeechLM/2024.06.05_LiveSpeech.md)
+[^39]: [LiveSpeech2](../SpeechLM/2024.10.01_LiveSpeech2.md)
+[^40]: [BASE-TTS](../SpeechLM/ST2S/2024.02.12_BASE-TTS.md)
+[^41]: [LLM2Speech](../SpeechLM/2023.09.20_LLM2Speech.md)
+[^42]: [FSQ](../../Modules/VQ/2023.09.27_FSQ.md)
+[^43]: [FunAudioLLM](../SpeechLM/2024.07.04_FunAudioLLM.md)
+[^44]: [RoPE](../../Modules/PositionEmb/RoPE.md)
+[^45]: [Qwen2.5](../TextLM/2024.12.19_Qwen2.5.md)
+[^46]: [CFG](../Diffusion/_2022.07.26_Classifier-Free_Guidance.md)
+[^47]: [iDDPM](../Diffusion/_2021.02.18_iDDPM.md)
+[^49]: [DPO](../../Modules/RLHF/2023.05.29_DPO.md)
+[^50]: [Paraformer](../-ASR/2022.06.16_Paraformer.md)
+[^51]: [LibriSpeech](../../Datasets/2015.04.19_LibriSpeech.md)
+[^52]: [ERes2Net](../_Basis/2023.05.22_ERes2Net.md)
+[^53]: [DNSMOS P.385](../../Evaluations/2021.10.05_DNSMOS_P.385.md)
+[^54]: [Whisper](../-ASR/2022.12.06_Whisper.md)
+[^55]: [S3prl](../../Evaluations/2024.04.15_SUPERB.md)
 [^56]: [ChatTTS [URL]](https://github.com/2noise/ChatTTS)
 [^57]: [GPT-SoVITS [URL]](https://github.com/RVC-Boss/GPT-SoVITS)
-[^58]: [OpenVoice](../../E2E/2023.12.03_OpenVoice.md)
-[^59]: [ParlerTTS](../2024.02.02_Parler-TTS.md)
+[^58]: [OpenVoice](../E2E/2023.12.03_OpenVoice.md)
+[^59]: [ParlerTTS](../SpeechLM/2024.02.02_Parler-TTS.md)
 [^60]: [EmotiVoice [URL]](https://github.com/netease-youdao/EmotiVoice)
